# tensor_compiler

codegen/: CMakeLists.txt  main.cpp
codegen/frontend/common/: node.hpp
codegen/frontend/lexer/include/: tokenizer.hpp
codegen/frontend/lexer/src/: tokenizer.cpp
codegen/frontend/parser/include/: tree.hpp  tree_builder.hpp
codegen/frontend/parser/src/: tree.cpp  tree_builder.cpp
codegen/reg_alloc/: main.cpp  node.hpp  stack.hpp  tree.cpp  tree.hpp
codegen/reg_alloc/tests/e2e/: test.cpp
codegen/tests/: CMakeLists.txt
codegen/tests/unit/: test_dump.cpp  test_tokenizer.cpp  test_tree_builder.cpp
frontend/: .gitignore  CMakeLists.txt  Readme.md  onnx.proto  test.cpp  test_output.dot
frontend/dump/: model.dot  model2.dot  model3.dot
frontend/src/: main.cpp
frontend/src/dump/: dump.cpp  dump.hpp
frontend/src/parse_onnx/: parser.cpp  parser.hpp
frontend/src/tree/: tree.cpp  tree.hpp
frontend/tests/: test_main.cpp
frontend/tests/e2e/: gentest.py  make_test_onnx.py  test_generate_and_parse.cpp  test_onnx_parsing.cpp
frontend/tests/unit/: test_node.cpp  test_tree.cpp
lec_tasks/codegen/: CMakeLists.txt  main.cpp
lec_tasks/codegen/lexical_analysis/include/: node.hpp  tokenizer.hpp  tree.hpp  tree_builder.hpp
lec_tasks/codegen/lexical_analysis/src/: tokenizer.cpp  tree_builder.cpp
lec_tasks/codegen/reg_alloc/: main.cpp  node.hpp  stack.hpp  tree.cpp  tree.hpp
lec_tasks/codegen/reg_alloc/tests/e2e/: test.cpp
lec_tasks/codegen/tests/: CMakeLists.txt
lec_tasks/codegen/tests/unit/: test_dump.cpp  test_tokenizer.cpp  test_tree_builder.cpp
lec_tasks/ir/: code.c  readme.md
lec_tasks/ir/codegen/: Readme.md  dag3.dot  dag4.dot  dag_code.gir  dag_inc.dot  data_dependency.dot  func.s  main.c  riscv_test
lec_tasks/ir/dom/: dom.dot
lec_tasks/ir/front/: front-dom.dot
lec_tasks/ir/generic/: code.dot  code.gir  const_fold.dot  unroll.dot
lec_tasks/kernels/: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  benchmark_results.json  results.json  run.sh
lec_tasks/kernels/bench/: bench_kernels.cpp
lec_tasks/kernels/include/: gemm.hpp  tensor.hpp
lec_tasks/kernels/src/: convolution.cpp  gemm.cpp
lec_tasks/kernels/test/: test_kernels.cpp
